# Kotlin-Learning

./: README.md
PhysicistsCard_App/: build.gradle.kts  gradle.properties  settings.gradle.kts
PhysicistsCard_App/androidApp/: PhysicistsCardApplication.kt  build.gradle.kts
PhysicistsCard_App/androidApp/sampledata/: Physics.kt
PhysicistsCard_App/androidApp/src/main/: AndroidManifest.xml
PhysicistsCard_App/gradle/: libs.versions.toml
PhysicistsCard_App/gradle/wrapper/: gradle-wrapper.properties
PhysicistsCard_App/shared/: build.gradle.kts
PhysicistsCard_AppServer/: README.md  build.gradle.kts  gradle.properties  physsicistsCard.jks  settings.gradle.kts
PhysicistsCard_AppServer/src/main/resources/: application.conf
PhysicistsCard_Web/: index.html  package-lock.json  package.json
PhysicistsCard_Web/src/: App.css  App.jsx
PhysicistsCard_Web/src/components/: IconButton.jsx  SearchBar.jsx
PhysicistsCard_Web/src/navPages/: AmateurCommunity.jsx  BountyDetail.jsx  CardBags.jsx  GeekReward.css  GeekReward.jsx  GrowForever.jsx  Home.css  Home.jsx  SpecialistCommunity.jsx  Supports.jsx  UserProfile.css  UserProfile.jsx
PhysicistsCard_Web/src/services/: api.js
PhysicistsCard_WebServer/: config.py  pyproject.toml  requirements.txt
PhysicistsCard_WebServer/app/: __init__.py
PhysicistsCard_WebServer/app/forms/: __init__.py
PhysicistsCard_WebServer/app/models/: __init__.py
PhysicistsCard_WebServer/app/routes/: __init__.py  api.py  main.py
PhysicistsCard_WebServer/templates/: index.html  login.html  register.html
(+484 files in other folders)
