[tool.poetry]
name = "physicistscard-web-server"
version = "0.1.0"
description = ""
authors = ["iammm0 <wisewater5419@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
flask-bcrypt = "^1.0.1"
flask-cors = "^4.0.1"
flask-restful = "^0.3.10"
flask-pymongo = "^2.3.0"
pymongo = "^4.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
